# wb_hw_2_python

wb_hw/: homework2.ipynb  pyproject.toml
