[tool.poetry]
name = "wb-hw"
version = "0.1.0"
description = ""
authors = ["aupoderni <poderniafina@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
numpy = "^1.26.1"
jupyterlab = "^4.0.7"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
